--- a/style.css
+++ b/style.css
@@ -70,6 +70,9 @@ body{
 .padding1{
     padding: 1em;
 }
+.padding125{
+    padding: 1.25em;
+}
 .marginZero{
     margin: 0;
 }
@@ -142,6 +145,9 @@ body{
 .darkerBlue{
     background-color: #0c354b;
 }
+.opacity07{
+    opacity: 0.7;
+}
 p:hover{
     cursor: default;
 }
@@ -160,6 +166,9 @@ p:hover{
 .borderLeft1pxDarker{
     border-left: solid 1px #0c354b;
 }
+.border3pxLighter{
+    border: solid 3px #365b6d;
+}
 .border5pxLighter{
     border: solid 5px #365b6d;
 }
@@ -172,11 +181,26 @@ p:hover{
 .borderRadius10{
     border-radius: 10px;
 }
+.radiusLowerCorners{
+    border-radius: 0 0 10px 10px;
+}
+.radiusUpperCorners{
+    border-radius: 10px 10px 0 0;
+}
 .positionAbsolute{
     position: absolute;
 }
 .invisible{
     visibility:hidden;
+}
+.zIndex40{
+    z-index: 40;
+}
+.zIndex50{
+    z-index: 50;
+}
+.noClick {
+    pointer-events: none;
 }
 .contentIMG{
     height: 120px;
@@ -219,8 +243,11 @@ p:hover{
     padding: 0.5em 0;
     width: 62px;
 }
-#logReg{
+.logReg{
     margin: 0 1em;
+}
+.marginRightProfile{
+    margin-right: 1em;
 }
 #logRegPopup{
     max-width: 250px;
@@ -233,7 +260,7 @@ p:hover{
 #menu{
     left: 0; 
     right: 0; 
-    bottom: 0; 
+    bottom: 40%; 
     top: 0; 
     margin: auto; 
     width: 230px;
@@ -283,9 +310,7 @@ p:hover{
     font-size: 1.2em;
     padding: 0.6em 0 0 0.75em;
 }
-.radiusLowerCorners{
-    border-radius: 0 0 7px 7px;
-}
+
 .itemInfo{
     font-size: 0.85em;
     color: rgb(97, 95, 95);
@@ -378,8 +403,11 @@ p:hover{
 .transition1sBackgroundColor{
     transition: background-color 0.5s;
 }
-.transition1sVisibility{
+.transition1s{
     transition: opacity 1s;
+}
+.transition05s{
+    transition: opacity 0.5s;
 }
 .goodAnswer{
     background-color: rgb(152, 255, 126);
@@ -421,7 +449,6 @@ input[type=number]::-webkit-outer-spin-button {
     }
     .contentSquare{
         align-items: flex-end !important;
-        height: 225px;
         width: 350px;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         transform: scale(1);
@@ -457,7 +484,6 @@ input[type=number]::-webkit-outer-spin-button {
     }
     .contentSquare{
         align-items: flex-end !important;
-        height: 225px;
         width: 300px;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         transform: scale(1);
@@ -485,6 +511,15 @@ input[type=number]::-webkit-outer-spin-button {
     }
 }
 @media only screen and (min-width:750px) and (max-width:1279px) {
+    .navbarContentButton {
+        padding: 0.25em 0;
+    }
+    .logReg{
+        margin: 0 0.5em;
+    }
+    .marginRightProfile{
+        margin-right: 0.5em;
+    }
     #categoryGrid{
         width: 100%;
         gap: 0.5em;
@@ -492,7 +527,6 @@ input[type=number]::-webkit-outer-spin-button {
     }
     .contentSquare{
         align-items: flex-end !important;
-        height: 225px;
         width: 300px;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         transform: scale(1);
@@ -503,6 +537,9 @@ input[type=number]::-webkit-outer-spin-button {
     }
     #logo{
         margin-left: 2em;
+    }
+    .bigLogo{
+        padding-right: 94px;
     }
     .buttonsBorder{
         border-right: solid 5px #365b6d;
@@ -525,7 +562,7 @@ input[type=number]::-webkit-outer-spin-button {
     #footerInfo{
         display: none;
     }
-    #newsletter{
+    #footer{
         width: 100%;
     }
     #navBarStandart {
@@ -536,19 +573,18 @@ input[type=number]::-webkit-outer-spin-button {
     }
     #categoryGrid{
         width: 100%;
-        gap: 1em;
+        gap: 0.5em;
         margin: 0.5em 0;
     }
     .contentSquare{
         align-items: flex-end !important;
-        height: 200px;
         width: 300px;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         transform: scale(1);
         transition: transform .4s;
     }
     #exercisesBox{
-        width: 60%;
+        margin-top: 1em;
     }
     #logo{
         margin: 0;
